--- a/src/components/SubredditSearch.css
+++ b/src/components/SubredditSearch.css
@@ -1,23 +1,21 @@
 .search-container{
-    display: flex;
-    padding: 10px;
-}
-
-.logo-bar{
-    padding-left: 40px;
+    display: flex;  
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 10px rgb(164, 164, 167);
+    border-radius: 5px;
+    justify-content: center;
 }
 
 .search-bar{
     display: flex;
     flex-wrap: wrap;
-    width: 30%;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 5px 5px 10px rgb(164, 164, 167);
-    border-radius: 5px;
+    max-width: 400px;
 }
 .search-bar p{
     font-size: 20px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 .search-bar .search-box{
     width: 100%;
@@ -25,4 +23,9 @@
 .search-bar .submit{
     margin: 10px;
     font-size: 20px;
+}
+
+.search-container img{
+    width: 300px;
+    height: 100px;
 }
