--- a/src/components/SubredditSearch.css
+++ b/src/components/SubredditSearch.css
@@ -3,25 +3,21 @@
     background-color: rgb(255, 255, 255);
     box-shadow: 5px 5px 10px rgb(164, 164, 167);
     border-radius: 5px;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 10px 40px;
 }
 
 .search-bar{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 400px;
-}
-.search-bar p{
-    font-size: 20px;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    align-items: center;
 }
 .search-bar .search-box{
-    width: 100%;
+    border: none;
+    background-color: #eeeded;
+    border-radius: 5px;
+    padding: 10px;
 }
 .search-bar .submit{
-    margin: 10px;
     font-size: 20px;
 }
 
@@ -30,15 +26,17 @@
     height: 100px;
 }
 button{
-    box-shadow: 5px 5px 10px rgb(164, 164, 167);
-    padding: 0 30px;
     transition: 0.2s;
     border-radius: 3px;
+    padding: 3px 8px 9px 8px;
 }
 button:hover{
-    box-shadow: 10px 10px 10px rgb(164, 164, 167);
     transition: 0.2s;
     background-color: #ff4300;
     color: white;
     cursor: pointer;
+}
+.search-icon{
+    position: relative;
+    top: 5px;
 }
