--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,14 @@
+:root{
+  --color-background: #fff;
+  --color-foreground: #e9e7e7bf;
+  --color-secondary: #ff4300;
+  --box-shadow: 5px 5px 10px rgb(164, 164, 167);
+  --box-shadow-hover: 10px 10px 10px rgb(164, 164, 167);
+  --radius: 5px;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 body{
   background-image: url('./image/Untitled\ design\(3\).png');
@@ -48,7 +22,7 @@ button {
 
 input:focus{
   outline: none;
-  border: 2px solid #ff4300;
-  box-shadow: 0 0 5px #ff4300;
-  border-radius: 3px;
+  border: 2px solid var(--color-secondary);
+  box-shadow: 0 0 5px var(--color-secondary);
+  border-radius: var(--radius);
 }
